--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "main": "index.js",
   "bin": "index.js",
   "scripts": {
-    "test": "standard && node test.js",
+    "test": "standard --fix && node test.js",
     "start": "node index.js"
   },
-  "author": "Thomas Watson Steen <w@tson.dk>",
+  "author": [
+    "Thomas Watson Steen <w@tson.dk>",
+    "William Cheng <wing328hk@gmail.com>"
+  ],
   "license": "MIT",
   "dependencies": {
     "get-port": "^4.0.0"
