--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "get-port": "^4.0.0"
+    "get-port": "^4.0.0",
+    "start": "^5.1.0"
   },
   "devDependencies": {
     "standard": "^12.0.1"
